test/test_examples/syntactic_examples/syntax_error/error_fun_def_17.zig
// Syntax error: comma after last parameter

const ifj = @import("ifj24.zig"); 

pub fn foo(param1:?[]u8,param2:?f64,) void {

}  